crates/opentree-core/tests/snapshots/render_snapshots__sitemap_xml.snap
---
source: crates/opentree-core/tests/render_snapshots.rs
expression: render_sitemap(&c)
---
<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>https://example.com/</loc>
    <changefreq>weekly</changefreq>
    <priority>1.0</priority>
  </url>
</urlset>
